reuse MavenEmbedder for all maven invocation prevent some guice object creation