@@ -61,37 +61,26 @@ public class MavenPom {
 		
 	}
 
-    public MavenExecutionResult executeGoals(List goals) throws PomExecutionException {
+    public MavenExecutionResult executeGoals(MavenEmbedder mavenEmbedder, MavenRequest mavenRequest) throws PomExecutionException {
+
         final List<String> succeededPlugins = new ArrayList<String>();
-        MavenRequest mavenRequest = new MavenRequest();
-        //mavenRequest.setPom(pluginCheckoutDir.getAbsolutePath()+"/pom.xml");
-        mavenRequest.setBaseDirectory(rootDir.getAbsolutePath());
-        mavenRequest.setGoals(goals);
+
         AbstractExecutionListener mavenListener = new AbstractExecutionListener(){
             public void mojoSucceeded(ExecutionEvent event){
                  succeededPlugins.add(event.getMojoExecution().getArtifactId());
             }
         };
-        mavenRequest.setUserSettingsFile(this.m2SettingsFile!=null?this.m2SettingsFile.getAbsolutePath():null);
-        mavenRequest.setExecutionListener(mavenListener);
-        mavenRequest.getUserProperties().put( "failIfNoTests", "false" );
-        mavenRequest.getUserProperties().put( "argLine", "-XX:MaxPermSize=128m" );
-        mavenRequest.setPom(rootDir.getAbsolutePath()+"/pom.xml");
-
         MavenExecutionResult result;
         try {
-            MavenEmbedder embedder = new MavenEmbedder(Thread.currentThread().getContextClassLoader(), mavenRequest);
-            result = embedder.execute(mavenRequest);
+
+            result = mavenEmbedder.execute(mavenRequest);
         }catch(MavenEmbedderException e){
-            // TODO: better manage this exception
-            throw new RuntimeException("Error during maven embedder execution", e);
-        } catch(ComponentLookupException e){
             // TODO: better manage this exception
             throw new RuntimeException("Error during maven embedder execution", e);
         }
 
         if(!result.getExceptions().isEmpty()){
-            throw new PomExecutionException("Error while executing pom goals : "+ Arrays.toString(goals.toArray()), result.getExceptions(), succeededPlugins);
+            throw new PomExecutionException("Error while executing pom goals : "+ Arrays.toString(mavenRequest.getGoals().toArray()), result.getExceptions(), succeededPlugins);
         }
 
         return result;
